<resources>
    <string name="app_name">Taji Cabs</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="fname_placeholder">First Name</string>
    <string name="lname_placeholder">Last Name</string>
    <string name="phone_number_placeholder">Phone Number</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="email_placeholder">E-mail</string>
    <string name="email_hint">E-mail Address</string>
    <string name="password_placeholder">Password</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Authenticating</string>
    <string name="in_use">This e-mail address is already in use</string>

    // Sign In Activity
    <string name="sign_in_text">Sign in with your Taji Cabs account</string>
    <string name="welcome_taji">Welcome to Taji Cabs</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="accountSignUp">Don\'t have an account? Create One</string>
    <string name="about_taji">About Taji Cabs</string>
    <string name="auth_failed">Account Authentication Failed.</string>

    // Sign Up Activity
    <string name="taji_registration">Create Taji Cabs Account</string>
    <string name="sign_up_text">Sign up to get your Taji Cabs account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="accountSignIn">Back to Sign In</string>
    <string name="id_number">ID Number</string>
    <string name="sign_up">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg_failed">Account created failed. Try again later</string>
    <string name="err_500">Something went wrong. Try again later</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_maps">Taji Cabs</string>

    // Home Activity
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found. Location services don\'t have permissions.</string>
    <string name="pick_place">Choose a place</string>
    <string name="hello">Hello</string>
    <string name="follow">Follow</string>
    <string name="title_activity_passenger_home">Passenger Home</string>
    <string name="pick_up">Enter Pick Up Point</string>
    <string name="destination">Enter Destination</string>
    <string name="book_ride">Book your ride</string>
    <string name="origin">From:</string>
    <string name="dest">To:</string>
    <string name="request_ride">Request Ride</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="fcm_message">Firebase Cloud Message</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="find_driver">Finding a driver near you</string>
    <string name="create_account">Create Account</string>

    <string name="password_hint">********</string>
    <string name="vehicle_make_placeholder">Vehicle Make</string>
    <string name="vehicle_reg_placeholder">Vehicle License</string>
    <string name="terms_and_conditions">Accept the Terms and Conditions</string>
    <string name="t_and_c"><![CDATA[Terms & Conditions]]></string>
    <string name="forgot_password_text">Forgot Your email/password? Just input your email and you\'ll be one click away from resetting your password</string>
    <string name="reset_account">RESET ACCOUNT</string>
    <string name="recovery_success">Recovery Mail Successfully Sent</string>
    <string name="where_would_you_like_to_go">Where would you like to go?</string>
    <string name="your_driver_is_on_their_way">Your driver is on their way...</string>
    <string name="end_trip_pop_up_text">Thank you for travelling with Taji Cabs. \n\nYour trip request has ended. Here\'s the total amount owed for the trip</string>
    <string name="ksh">KSh</string>
    <string name="_0000">0000</string>
    <string name="hello_first_name">Hello, First Name</string>
    <string name="welcome_long_text">Your Taji account set up was successful. \n\nLet\'s ride Taji Cabs. We\'ll take you anywhere.</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="settings">Settings</string>
    <string name="terms_privacy_policy">Privacy Policy</string>
    <string name="my_profile">My Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_trips">My Trips</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_from">Where From?</string>
    <string name="where_to">Where To?</string>
    <string name="driver_name_placeholder">Marion Speedwagon</string>
    <string name="your_taxi_is_on_the_way">Your Taxi is on the way</string>
    <string name="car_type">CAR TYPE</string>
    <string name="car_type_example">Toyota Fielder - Silver</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="driver_image">driver_image</string>
    <string name="vehicle_exmaple_reg">KCY 014E</string>
    <string name="reason_for_cancelling_request">Reason For Cancelling Request</string>
    <string name="radio_text_1">Unable to Contact Driver</string>
    <string name="radio_text_2">Driver Cancelled Request</string>
    <string name="radio_text_3">Driver Took Too Long To Arrive</string>
    <string name="radio_text_4">Other Reason</string>
    <string name="dismiss">Dismiss Modal</string>
</resources>
