<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".app.Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="@dimen/dim_20"
            android:paddingEnd="@dimen/dim_20"
            android:layout_weight="1">

            <TextView
                android:id="@+id/helloText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dim_25"
                android:paddingStart="@dimen/dim_15"
                android:paddingEnd="@dimen/dim_00"
                android:text="@string/hello_first_name"
                android:gravity="start"
                tools:ignore="SpUsage" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="@dimen/dim_20"
            android:paddingEnd="@dimen/dim_20"
            android:layout_weight="6"
            tools:ignore="UselessLeaf" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/on_boarding_ui" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:paddingStart="@dimen/dim_20"
            android:paddingEnd="@dimen/dim_20"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingStart="@dimen/dim_20"
                    android:paddingEnd="@dimen/dim_20"
                    android:layout_weight="2.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="@dimen/dim_00"
                        android:text="@string/welcome_long_text"
                        android:gravity="center"
                        tools:ignore="SpUsage" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/finishSetup"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@drawable/borderline"
                        android:paddingStart="@dimen/dim_40"
                        android:paddingEnd="@dimen/dim_40"
                        android:text="@string/finish_setup"
                        android:textColor="@color/colorPrimaryDark" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>