<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet_driver_details"
    android:layout_width="match_parent"
    android:layout_height="430dp"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="430dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/transparent"
        android:layout_marginTop="@dimen/dim_10"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_corner_radius"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/taji_gradient"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="4"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginStart="@dimen/dim_10"
                        android:layout_marginEnd="@dimen/dim_10"
                        android:layout_marginTop="@dimen/dim_15"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:id="@+id/driverName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/dim_05"
                            android:paddingStart="@dimen/dim_05"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dim_25"
                            android:layout_marginTop="@dimen/dim_05"
                            android:text="@string/driver_name_placeholder"
                            tools:ignore="SpUsage" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">


                    <ImageView
                        android:id="@+id/driverImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:paddingStart="@dimen/dim_10"
                        android:paddingEnd="@dimen/dim_10"
                        android:layout_marginTop="@dimen/dim_10"
                        android:contentDescription="@string/driver_image"
                        android:scaleType="fitCenter"
                        android:src="@drawable/avatar_1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:layout_marginTop="-55dp"
                android:weightSum="4"
                android:baselineAligned="false"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:paddingStart="@dimen/dim_20"
                        android:paddingEnd="@dimen/dim_20"
                        tools:ignore="MissingConstraints">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="@dimen/dim_15"
                            android:scaleType="fitCenter"
                            android:src="@drawable/taxi_3D" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="65dp"
                    android:background="@color/white"
                    android:layout_marginTop="55dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/dim_10"
                        android:layout_marginEnd="@dimen/dim_10"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_grey"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="@dimen/dim_15"
                            android:text="@string/your_taxi_is_on_the_way"
                            tools:ignore="SpUsage" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="4"
                android:baselineAligned="false"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/dim_15"
                    android:paddingBottom="@dimen/dim_15"
                    android:paddingStart="@dimen/dim_05"
                    android:paddingEnd="@dimen/dim_00"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:paddingStart="@dimen/dim_15"
                        android:paddingEnd="@dimen/dim_00"
                        android:paddingTop="@dimen/dim_10"
                        android:paddingBottom="@dimen/dim_05"
                        android:textAllCaps="true"
                        android:text="@string/vehicle_details"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/vehicleDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:paddingStart="@dimen/dim_15"
                        android:paddingEnd="@dimen/dim_00"
                        android:paddingTop="@dimen/dim_05"
                        android:paddingBottom="@dimen/dim_10"
                        android:text="@string/car_type_example"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/vehicleReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:paddingStart="@dimen/dim_15"
                        android:paddingEnd="@dimen/dim_00"
                        android:paddingTop="@dimen/dim_05"
                        android:paddingBottom="@dimen/dim_10"
                        android:text="@string/vehicle_exmaple_reg"
                        tools:ignore="SpUsage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/dim_05"
                    android:paddingEnd="@dimen/dim_00"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:id="@+id/phoneCall"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/dim_20"
                        android:scaleType="fitCenter"
                        android:src="@drawable/phone_call" />

                    <ImageView
                        android:id="@+id/message"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/comments" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginBottom="@dimen/dim_15"
                android:padding="@dimen/dim_10"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancelRequest"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_50"
                    android:background="@drawable/red_round_button"
                    android:textColor="@android:color/white"
                    android:text="@string/cancel_request"
                    android:layout_gravity="center"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>